--- a/f/css/style.css
+++ b/f/css/style.css
@@ -63,7 +63,7 @@
   top: -3px;
   width: 21px;
   height: 22px;
-  background: url(f/i/cart-icon.png);
+  background: url(../../f/i/cart-icon.png);
   display: block
 }
 .header__cart__link {
@@ -101,7 +101,7 @@
   left: 10px;
   width: 90px;
   position: absolute;
-  background: url(f/i/main-menu-icons.png) no-repeat;
+  background: url(../../f/i/main-menu-icons.png) no-repeat;
   z-index: -1
 }
 .header__menu__item:hover .header__sub-menu {
@@ -255,7 +255,7 @@
 .header__map:before {
   content: '';
   display: block;
-  background: url(f/i/map-icon.png);
+  background: url(../../f/i/map-icon.png);
   width: 20px;
   height: 23px;
   position: absolute;
@@ -284,14 +284,14 @@
   height: 396px;
   margin: 0 auto;
   clear: both;
-  background: url(f/i/main-banner-back.jpg);
+  background: url(../../f/i/main-banner-back.jpg);
   border: 2px solid #222a2e;
   position: relative
 }
 .main-banner:before {
   content: '';
   position: absolute;
-  background: url(f/i/main-banner-back-left.png);
+  background: url(../../f/i/main-banner-back-left.png);
   left: -113px;
   top: 155px;
   width: 112px;
@@ -300,7 +300,7 @@
 .main-banner:after {
   content: '';
   position: absolute;
-  background: url(f/i/main-banner-back-right.png);
+  background: url(../../f/i/main-banner-back-right.png);
   width: 153px;
   height: 298px;
   right: -153px;
@@ -381,7 +381,7 @@
 .main-banner__info__title:after {
   content: '';
   position: absolute;
-  background: url(f/i/main-slides/info-separator.png);
+  background: url(../../f/i/main-slides/info-separator.png);
   bottom: -50px;
   left: 10px;
   width: 320px;
@@ -483,7 +483,7 @@
 .prof-center__main__map:before {
   content: '';
   display: block;
-  background: url(f/i/map-icon.png) no-repeat;
+  background: url(../../f/i/map-icon.png) no-repeat;
   width: 20px;
   height: 23px;
   position: absolute;
@@ -525,7 +525,7 @@
 .prof-center__main__catalog:before {
   content: '';
   display: block;
-  background: url(f/i/catalog-icon.png) no-repeat;
+  background: url(../../f/i/catalog-icon.png) no-repeat;
   width: 24px;
   height: 20px;
   position: absolute;
@@ -599,7 +599,7 @@
 .about-center__title:after {
   content: '';
   position: absolute;
-  background: url(f/i/about-center-separator.png);
+  background: url(../../f/i/about-center-separator.png);
   bottom: -50px;
   left: 90px;
   width: 260px;
@@ -691,7 +691,7 @@
 .about-center__btn__title:before {
   content: '';
   position: absolute;
-  background: url(f/i/about-center-btn.png);
+  background: url(../../f/i/about-center-btn.png);
   top: -5px;
   left: -100px;
   width: 80px;
@@ -726,7 +726,7 @@
   padding: 0;
   width: 590px;
   height: 400px;
-  background: url(f/i/about-center-slider/slider-back.jpg) no-repeat;
+  background: url(../../f/i/about-center-slider/slider-back.jpg) no-repeat;
   margin: 30px 0 -10px 205px;
   position: relative
 }
@@ -774,7 +774,7 @@
   top: 2px;
   width: 38px;
   height: 14px;
-  background: url(f/i/about-center-slider/slider-arrows.png) 0 0 no-repeat
+  background: url(../../f/i/about-center-slider/slider-arrows.png) 0 0 no-repeat
 }
 .about-center__slider__next:hover {
   color: #2f6b23;
@@ -806,7 +806,7 @@
   top: 2px;
   width: 38px;
   height: 14px;
-  background: url(f/i/about-center-slider/slider-arrows.png) -38px 0 no-repeat
+  background: url(../../f/i/about-center-slider/slider-arrows.png) -38px 0 no-repeat
 }
 .about-center__slider__prev:hover {
   color: #2f6b23;
@@ -874,7 +874,7 @@
   top: 55px;
   width: 38px;
   height: 14px;
-  background: url(f/i/about-center-slider/slider-arrows.png) 0 0 no-repeat;
+  background: url(../../f/i/about-center-slider/slider-arrows.png) 0 0 no-repeat;
   cursor: pointer
 }
 .about-center__partners__slider__next:hover {
@@ -887,7 +887,7 @@
   right: -60px;
   height: 14px;
   width: 38px;
-  background: url(f/i/about-center-slider/slider-arrows.png) -38px 0 no-repeat;
+  background: url(../../f/i/about-center-slider/slider-arrows.png) -38px 0 no-repeat;
   cursor: pointer
 }
 .about-center__partners__slider__prev:hover {
@@ -937,7 +937,7 @@
   left: 10px;
   width: 145px;
   position: absolute;
-  background: url(f/i/bottom-menu-icons.png) no-repeat
+  background: url(../../f/i/bottom-menu-icons.png) no-repeat
 }
 .bottom-menu__title_1:before {
   background-position: 0 0
@@ -1031,7 +1031,7 @@
   left: -60px;
   width: 54px;
   position: absolute;
-  background: url(f/i/big-map-icon.png) no-repeat
+  background: url(../../f/i/big-map-icon.png) no-repeat
 }
 .bottom-map__bookmark__detail {
   font-family: "PT Sans";
@@ -1070,7 +1070,7 @@
   left: 300px;
   width: 20px;
   position: absolute;
-  background: url(f/i/map-arrow.png) no-repeat
+  background: url(../../f/i/map-arrow.png) no-repeat
 }
 .bottom-map__content_1:before {
   left: 300px
