--- a/f/less/style.less
+++ b/f/less/style.less
@@ -89,7 +89,7 @@
 	top: -3px;
 	width: 21px;
 	height: 22px;
-	background: url(/f/i/cart-icon.png);
+	background: url(../../f/i/cart-icon.png);
 	display: block;
 }
 
@@ -121,7 +121,7 @@
 		left: 10px;
 		width: 90px;
 		position: absolute;
-		background: url(/f/i/main-menu-icons.png) no-repeat;
+		background: url(../../f/i/main-menu-icons.png) no-repeat;
 		z-index: -1;
 	}
 	&:after {
@@ -132,7 +132,7 @@
 		left: 10px;
 		width: 90px;
 		position: absolute;
-		background: url(/f/i/main-menu-icons.png) no-repeat;
+		background: url(../../f/i/main-menu-icons.png) no-repeat;
 		.transition(opacity, .2s, ease-in-out);
 	}
 	&:hover:after {
@@ -288,7 +288,7 @@
 .header__map:before{
 	content: '';
 	display: block;
-	background: url(/f/i/map-icon.png);
+	background: url(../../f/i/map-icon.png);
 	width: 20px;
 	height: 23px;
 	position: absolute;
@@ -321,14 +321,14 @@
 	height: 396px;
 	margin: 0 auto;
 	clear: both;
-	background: url(/f/i/main-banner-back.jpg);
+	background: url(../../f/i/main-banner-back.jpg);
 	border: 2px solid #222a2e;
 	position: relative;
 	
 	&:before{
 		content: '';
 		position: absolute;
-		background: url(/f/i/main-banner-back-left.png);
+		background: url(../../f/i/main-banner-back-left.png);
 		left: -113px;
 		top: 155px;
 		width: 112px;
@@ -338,7 +338,7 @@
 	&:after{
 		content: '';
 		position: absolute;
-		background: url(/f/i/main-banner-back-right.png);
+		background: url(../../f/i/main-banner-back-right.png);
 		width: 153px;
 		height: 298px;
 		right: -153px;
@@ -427,7 +427,7 @@
 		&__title:after{
 			content: '';
 			position: absolute;
-			background: url(/f/i/main-slides/info-separator.png);
+			background: url(../../f/i/main-slides/info-separator.png);
 			bottom: -50px;
 			left: 10px;
 			width: 320px;
@@ -705,7 +705,7 @@
 		.icon-video,
 		.icon-blog:after,
 		.icon-video:after {
-			background: url(/f/i/about-center-btn.png);
+			background: url(../../f/i/about-center-btn.png);
 			width: 80px;
 			height: 80px;
 			position: absolute;
@@ -752,7 +752,7 @@
 		padding: 0;
 		width: 590px;
 		height: 400px;
-		background: url(/f/i/about-center-slider/slider-back.jpg) no-repeat;
+		background: url(../../f/i/about-center-slider/slider-back.jpg) no-repeat;
 		position: relative;
 		&__wrap {
 			overflow: hidden;
@@ -791,7 +791,7 @@
 				top: 2px;
 				width: 38px;
 				height: 14px;
-				background: url(/f/i/about-center-slider/slider-arrows.png) 0 0 no-repeat;
+				background: url(../../f/i/about-center-slider/slider-arrows.png) 0 0 no-repeat;
 			}
 			cursor: pointer;
 			&:hover {
@@ -815,7 +815,7 @@
 				top: 2px;
 				width: 38px;
 				height: 14px;
-				background: url(/f/i/about-center-slider/slider-arrows.png) -38px 0 no-repeat;
+				background: url(../../f/i/about-center-slider/slider-arrows.png) -38px 0 no-repeat;
 			}
 			cursor: pointer;
 			&:hover {
@@ -880,7 +880,7 @@
 			top: 55px;
 			width: 38px;
 			height: 14px;
-			background: url(/f/i/about-center-slider/slider-arrows.png) 0 0 no-repeat;
+			background: url(../../f/i/about-center-slider/slider-arrows.png) 0 0 no-repeat;
 			cursor: pointer;
 			&:hover {
 				background-position: 0 -14px;
@@ -893,7 +893,7 @@
 			right: -60px;
 			height: 14px;
 			width: 38px;
-			background: url(/f/i/about-center-slider/slider-arrows.png) -38px 0 no-repeat;
+			background: url(../../f/i/about-center-slider/slider-arrows.png) -38px 0 no-repeat;
 			cursor: pointer;
 			&:hover {
 				background-position: -38px -14px;
@@ -944,7 +944,7 @@
 			margin: 0 auto;
 			display: inline-block;
 		 	position: absolute;
-			background: url(/f/i/bottom-menu-icons.png) no-repeat;
+			background: url(../../f/i/bottom-menu-icons.png) no-repeat;
 		}
 		&:after {
 			opacity: 0;
@@ -1049,7 +1049,7 @@
 				left: -60px;
 				width: 54px;
 				position: absolute;
-				background: url(/f/i/big-map-icon.png) no-repeat;
+				background: url(../../f/i/big-map-icon.png) no-repeat;
 			}
 		}
 		
@@ -1091,7 +1091,7 @@
 			left: 300px;
 			width: 20px;
 			position: absolute;
-			background: url(/f/i/map-arrow.png) no-repeat;
+			background: url(../../f/i/map-arrow.png) no-repeat;
 		}
 		
 		&_1{
