--- a/f/less/style.less
+++ b/f/less/style.less
@@ -523,7 +523,7 @@
 		&:before{
 			content: '';
 			display: block;
-			background: url(/f/i/map-icon.png) no-repeat;
+			background: url(../../f/i/map-icon.png) no-repeat;
 			width: 20px;
 			height: 23px;
 			position: absolute;
@@ -564,7 +564,7 @@
 		&:before{
 			content: '';
 			display: block;
-			background: url(/f/i/catalog-icon.png) no-repeat;
+			background: url(../../f/i/catalog-icon.png) no-repeat;
 			width: 24px;
 			height: 20px;
 			position: absolute;
@@ -630,7 +630,7 @@
 		&:after{
 			content: '';
 			position: absolute;
-			background: url(/f/i/about-center-separator.png);
+			background: url(../../f/i/about-center-separator.png);
 			bottom: -50px;
 			left: 0;
 			right: 0;
