--- a/f/less/style.less
+++ b/f/less/style.less
@@ -944,7 +944,7 @@
 			margin: 0 auto;
 			display: inline-block;
 		 	position: absolute;
-			background: url(../../f/i/bottom-menu-icons.png) no-repeat;
+			background: url(../../f/i/bottom-menu-icons.jpg) no-repeat;
 		}
 		&:after {
 			opacity: 0;
