--- a/f/less/style.less
+++ b/f/less/style.less
@@ -43,10 +43,14 @@
 }
 
 .header{
-	width: 980px;
 	height: 200px;
 	margin: 0 auto;
 	clear: both;
+	&__address {
+		.sans();
+		line-height: 20px;
+		margin: 0;
+	}
 }
 
 .header__top{
@@ -89,7 +93,7 @@
 	top: -3px;
 	width: 21px;
 	height: 22px;
-	background: url(../../f/i/cart-icon.png);
+	background: url(../..../../f/i/cart-icon.png);
 	display: block;
 }
 
@@ -121,7 +125,7 @@
 		left: 10px;
 		width: 90px;
 		position: absolute;
-		background: url(../../f/i/main-menu-icons.png) no-repeat;
+		background: url(../..../../f/i/main-menu-icons.png) no-repeat;
 		z-index: -1;
 	}
 	&:after {
@@ -132,7 +136,7 @@
 		left: 10px;
 		width: 90px;
 		position: absolute;
-		background: url(../../f/i/main-menu-icons.png) no-repeat;
+		background: url(../..../../f/i/main-menu-icons.png) no-repeat;
 		.transition(opacity, .2s, ease-in-out);
 	}
 	&:hover:after {
@@ -265,7 +269,6 @@
 	.serif__italic(30px);
 	letter-spacing: .6px;
 	font-weight: bold;
-	margin-bottom: 10px;
 	display: inline-block;
 }
 
@@ -288,7 +291,7 @@
 .header__map:before{
 	content: '';
 	display: block;
-	background: url(../../f/i/map-icon.png);
+	background: url(../..../../f/i/map-icon.png);
 	width: 20px;
 	height: 23px;
 	position: absolute;
@@ -317,18 +320,18 @@
 }
 
 .main-banner{
-	width: 976px;
+	width: 980px;
 	height: 396px;
 	margin: 0 auto;
 	clear: both;
-	background: url(../../f/i/main-banner-back.jpg);
+	background: url(../..../../f/i/main-banner-back.jpg);
 	border: 2px solid #222a2e;
 	position: relative;
 	
 	&:before{
 		content: '';
 		position: absolute;
-		background: url(../../f/i/main-banner-back-left.png);
+		background: url(../..../../f/i/main-banner-back-left.png);
 		left: -113px;
 		top: 155px;
 		width: 112px;
@@ -338,10 +341,10 @@
 	&:after{
 		content: '';
 		position: absolute;
-		background: url(../../f/i/main-banner-back-right.png);
+		background: url(../..../../f/i/main-banner-back-right.png);
 		width: 153px;
 		height: 298px;
-		right: -153px;
+		right: -155px;
 		top: 20px;
 	}
 	
@@ -374,7 +377,7 @@
 		}	
 	
 	&__holder{
-		width: 956px;
+		width: 960px;
 		height: 378px;
 		margin: 8px;
 		border: 1px solid #222a2e;
@@ -389,7 +392,7 @@
 	}	
 	
 	&__wrap{
-		width: 940px;
+		width: 960px;
 	}
 	
 	&__item{
@@ -427,7 +430,7 @@
 		&__title:after{
 			content: '';
 			position: absolute;
-			background: url(../../f/i/main-slides/info-separator.png);
+			background: url(../..../../f/i/main-slides/info-separator.png);
 			bottom: -50px;
 			left: 10px;
 			width: 320px;
@@ -469,28 +472,38 @@
 	}
 }
 .prof-center {
-	margin: 0 auto;
-	width: 1010px;
+
 }
 .prof-center__main {
 	height: 441px;
 	margin-top: 20px;
 	position: relative;
-	background: url(../../f/i/prof-center-back.jpg) no-repeat;
-	z-index: 2;
+	border-bottom: 2px solid #000;
+	&:after {
+		content: '';
+		position: absolute;
+		top: 0;
+		left: 0;
+		height: 440px;
+		width: 1010px;
+		opacity: 0;
+		background: url(../..../../f/i/prof-center-back.jpg) no-repeat 0 -440px;
+		.transition(opacity, .2s, ease-in-out);
+		z-index: -1;
+	}
 	&:before {
 		content: '';
 		position: absolute;
 		top: 0;
 		left: 0;
-		height: 441px;
-		width: 1007px;
-		opacity: 0;
-		background: url(../../f/i/prof-center-back.jpg) no-repeat 0 -441px;
+		height: 440px;
+		width: 1010px;
+		opacity: 1;
+		background: url(../..../../f/i/prof-center-back.jpg) no-repeat 0 0;
 		.transition(opacity, .2s, ease-in-out);
 		z-index: -1;
 	}
-	&:hover:before {
+	&:hover:after {
 		opacity: 1;
 	}
 	&__title{
@@ -523,7 +536,7 @@
 		&:before{
 			content: '';
 			display: block;
-			background: url(../../f/i/map-icon.png) no-repeat;
+			background: url(../..../../f/i/map-icon.png) no-repeat;
 			width: 20px;
 			height: 23px;
 			position: absolute;
@@ -564,7 +577,7 @@
 		&:before{
 			content: '';
 			display: block;
-			background: url(../../f/i/catalog-icon.png) no-repeat;
+			background: url(../..../../f/i/catalog-icon.png) no-repeat;
 			width: 24px;
 			height: 20px;
 			position: absolute;
@@ -614,7 +627,6 @@
 }
 
 .about-center{
-	width: 1000px;
 	margin: 45px auto 30px;
 	text-align: center;
 	padding: 0 30px;
@@ -630,7 +642,7 @@
 		&:after{
 			content: '';
 			position: absolute;
-			background: url(../../f/i/about-center-separator.png);
+			background: url(../..../../f/i/about-center-separator.png);
 			bottom: -50px;
 			left: 0;
 			right: 0;
@@ -705,7 +717,7 @@
 		.icon-video,
 		.icon-blog:after,
 		.icon-video:after {
-			background: url(../../f/i/about-center-btn.png);
+			background: url(../..../../f/i/about-center-btn.png);
 			width: 80px;
 			height: 80px;
 			position: absolute;
@@ -752,7 +764,7 @@
 		padding: 0;
 		width: 590px;
 		height: 400px;
-		background: url(../../f/i/about-center-slider/slider-back.jpg) no-repeat;
+		background: url(../..../../f/i/about-center-slider/slider-back.jpg) no-repeat;
 		position: relative;
 		&__wrap {
 			overflow: hidden;
@@ -791,7 +803,7 @@
 				top: 2px;
 				width: 38px;
 				height: 14px;
-				background: url(../../f/i/about-center-slider/slider-arrows.png) 0 0 no-repeat;
+				background: url(../..../../f/i/about-center-slider/slider-arrows.png) 0 0 no-repeat;
 			}
 			cursor: pointer;
 			&:hover {
@@ -815,7 +827,7 @@
 				top: 2px;
 				width: 38px;
 				height: 14px;
-				background: url(../../f/i/about-center-slider/slider-arrows.png) -38px 0 no-repeat;
+				background: url(../..../../f/i/about-center-slider/slider-arrows.png) -38px 0 no-repeat;
 			}
 			cursor: pointer;
 			&:hover {
@@ -880,7 +892,7 @@
 			top: 55px;
 			width: 38px;
 			height: 14px;
-			background: url(../../f/i/about-center-slider/slider-arrows.png) 0 0 no-repeat;
+			background: url(../..../../f/i/about-center-slider/slider-arrows.png) 0 0 no-repeat;
 			cursor: pointer;
 			&:hover {
 				background-position: 0 -14px;
@@ -893,7 +905,7 @@
 			right: -60px;
 			height: 14px;
 			width: 38px;
-			background: url(../../f/i/about-center-slider/slider-arrows.png) -38px 0 no-repeat;
+			background: url(../..../../f/i/about-center-slider/slider-arrows.png) -38px 0 no-repeat;
 			cursor: pointer;
 			&:hover {
 				background-position: -38px -14px;
@@ -912,13 +924,10 @@
 
 }
 .bottom-menu-wrap {
-	width: 980px;
-	margin: 0 auto;
 	border-bottom: 2px solid #ede5ce;
 }
 
 .bottom-menu {
-	width: 980px;
 	padding: 200px 0 0;
 	margin-bottom: 40px;
 	margin-left: -17px;
@@ -944,7 +953,7 @@
 			margin: 0 auto;
 			display: inline-block;
 		 	position: absolute;
-			background: url(../../f/i/bottom-menu-icons.jpg) no-repeat;
+			background: url(../..../../f/i/bottom-menu-icons.jpg) no-repeat;
 		}
 		&:after {
 			opacity: 0;
@@ -1016,8 +1025,6 @@
 }
 
 .bottom-map{
-	width: 1000px;
-	margin: 0 auto;
 	margin-top: 15px;
 	&__title{
 		.serif__italic(30px);
@@ -1049,7 +1056,7 @@
 				left: -60px;
 				width: 54px;
 				position: absolute;
-				background: url(../../f/i/big-map-icon.png) no-repeat;
+				background: url(../..../../f/i/big-map-icon.png) no-repeat;
 			}
 		}
 		
@@ -1074,9 +1081,8 @@
 	}
 	
 	&__holder{
-		width: 980px;
 		height: 270px;
-		margin: 35px 8px;
+		margin: 35px 0;
 		border: 2px solid #1d2225;
 	}
 		
@@ -1091,7 +1097,7 @@
 			left: 300px;
 			width: 20px;
 			position: absolute;
-			background: url(../../f/i/map-arrow.png) no-repeat;
+			background: url(../..../../f/i/map-arrow.png) no-repeat;
 		}
 		
 		&_1{
@@ -1113,8 +1119,6 @@
 }
 
 .footer{
-	width: 980px;
-	margin: 0 auto;
 	height: 100px;
 }
 
@@ -1177,5 +1181,364 @@
 	
 	.footer{
 		width: 960px;
+	}
+}
+.b-submenu {
+	display: inline-block;
+	vertical-align: top;
+	width: 25%;
+	list-style: none;
+	padding: 0;
+	padding-right: 50px;
+	&__item {
+		text-align: center;
+		margin-bottom: 38px;
+		position: relative;
+	}
+	&__link {
+		.serif__italic(16px);
+		letter-spacing: .05em;
+		&:before {
+			content: '';
+			position: absolute;
+			background: url(../../f/i/sub-menu-ico.png);
+			left: 50%;
+			top: -10px;
+			width: 50px;
+			height: 60px;
+			opacity: .6;
+			z-index: -1;
+			.transition(opacity, .2s, ease-in-out);
+		}
+		.b-submenu__item_active & {
+			pointer-events: none;
+		}
+		.b-submenu__item_active &:before {
+			opacity: 1;
+		}
+		&:hover:before {
+			opacity: 1;
+		}
+		.b-submenu__item_1 &:before {
+			width: 51px;
+			height: 61px;
+			background-position: 0 -1px;
+			margin-left: -25px;
+		}
+		.b-submenu__item_2 &:before {
+			width: 48px;
+			height: 54px;
+			background-position: -3px -61px;
+			margin-left: -24px;
+		}
+		.b-submenu__item_3 &:before {
+			width: 34px;
+			height: 62px;
+			background-position: -10px -115px;
+			margin-left: -17px;
+		}
+		.b-submenu__item_4 &:before {
+			width: 47px;
+			height: 47px;
+			background-position: -4px -177px;
+			margin-left: -23px;
+		}
+		.b-submenu__item_5 &:before {
+			width: 46px;
+			height: 55px;
+			background-position: -5px -224px;
+			margin-left: -23px;
+		}
+		.b-submenu__item_6 &:before {
+			width: 31px;
+			height: 53px;
+			background-position: -13px -279px;
+			margin-left: -15px;
+		}
+		.b-submenu__item_7 &:before {
+			width: 39px;
+			height: 40px;
+			background-position: -8px -331px;
+			margin-left: -20px;
+			top: 0;
+		}
+		.b-submenu__item_8 &:before {
+			width: 56px;
+			height: 45px;
+			background-position: 0 -379px;
+			margin-left: -22px;
+		}
+	}
+	& ul {
+		margin-top: 30px;
+		list-style: none;
+		padding: 15px 20px 5px;
+		border: 2px solid #d6c494;
+		text-align: left;
+		margin-bottom: 20px;
+		position: relative;
+		&:before,
+		&:after {
+			position: absolute;
+			content: '';
+			border: 12px solid transparent;
+			border-bottom: 12px solid #d6c494;
+			border-top: none;
+			top: -12px;
+			left: 0;
+			right: 0;
+			margin: 0 auto;
+			width: 0;
+		}
+		&:after {
+			border: 10px solid transparent;
+			border-bottom: 10px solid #fff;
+			top: -19px;
+			z-index: 2;
+		}
+		& li {
+			margin-bottom: 12px;
+		}
+		& li a {
+			.sans(16px);
+			border-bottom: 1px dotted;
+			text-decoration: none;
+			line-height: 17px;
+			display: inline-block;
+			margin-right: 5px;
+			letter-spacing: .025em;
+			color: #1d2225;
+			&:hover {
+				color: #2f6b23;
+			}
+		}
+		& li span {
+			.sans(14px);
+			color: #b9a264;
+		}
+	}
+}
+.b-content {
+	width: 1000px;
+	margin: 0 auto;
+	padding: 0 10px;
+}
+.b-catalog {
+	border-bottom: 2px solid #ede4ce;
+	border-top: 2px solid #ede4ce;
+	padding: 20px 0 50px;
+	&__wrap {
+		display: inline-block;
+		vertical-align: top;
+		width: 75%;
+	}
+	&__holder {
+		margin-left: -37px;
+	}
+	&__title {
+		.serif__italic(30px);
+		line-height: 40px;
+		text-align: center;
+		margin: 0 0 40px;
+	}
+	&__section {
+		position: relative;
+		min-height: 100px;
+		overflow: hidden;
+		& + & {
+			margin-top: -15px;
+		}
+	}
+	&__sep {
+		background: url(../../f/i/icons.png) 0 0;
+		width: 99px;
+		height: 35px;
+		display: block;
+		margin: 0 auto;
+		margin-bottom: 40px;
+		&:before {
+			content: '';
+			position: absolute;
+			height: 2px;
+			background: #000;
+			width: 100%;
+			left: 50%;
+			top: 20px;
+			margin-left: 60px;
+		}
+		&:after {
+			content: '';
+			position: absolute;
+			height: 2px;
+			background: #000;
+			width: 100%;
+			right: 50%;
+			top: 20px;
+			margin-right: 60px;
+		}
+		&_2,
+		&_3 {
+			background: url(../../f/i/sub-menu-ico.png);
+			width: 48px;
+			height: 54px;
+			background-position: -3px -61px;
+			opacity: .5;
+			margin-bottom: 20px;
+			&:before {
+				background: #ede4ce;
+				top: 25px;
+				margin-left: 40px;
+			}
+			&:after {
+				background: #ede4ce;
+				top: 25px;
+				margin-right: 40px;
+			}
+		}
+		&_3 {
+			width: 34px;
+			height: 62px;
+			background-position: -10px -115px;
+		}
+	}
+	&__item {
+		width: 220px;
+		height: 355px;
+		border: 2px solid #000;
+		padding: 5px;
+		display: inline-block;
+		vertical-align: top;
+		text-decoration: none;
+		background: url(../../f/i/main-banner-back.jpg);
+		margin: 0 0 37px 37px;
+		&-holder {
+			border: 1px solid #000;
+			height: 100%;
+			min-height: 100%;
+			background: #f9f8f7;
+			padding: 19px;
+			display: block;
+		}
+		&:hover .b-catalog__name {
+			color: #2f6b23;
+		}
+		&_descr {
+			background: url(../../f/i/catalog-descr.png);
+			padding: 5px 20px;
+			background-color: #f9f8f7;
+			text-align: center;
+		}
+		&-title {
+			.serif__italic(16px);
+			font-weight: bold;
+			line-height: 20px;
+		}
+		&-text {
+			.sans(14px);
+			line-height: 25px;
+			color: #6b7377;
+			margin-bottom: 5px;
+		}
+		& a {
+			.serif__italic(14px);
+			line-height: 30px;
+			letter-spacing: .05em;
+			&:hover {
+				color: #2f6b23;
+			}
+		}
+	}
+	&__img {
+		border: 1px solid #4d4d4d;
+		width: 166px;
+		height: 166px;
+		background: #fff;
+		display: block;
+		overflow: hidden;
+		margin-bottom: 25px;
+		& img {
+			min-width: 100%;
+		}
+	}
+	&__name {
+		display: block;
+		.serif__italic(14px);
+		line-height: 20px;
+		text-align: center;
+		color: #1d2225;
+		letter-spacing: .05em;
+		margin-bottom: 12px;
+	}
+	&__price {
+		display: block;
+		padding-top: 12px;
+		.serif__italic(14px);
+		text-align: center;
+		position: relative;
+		&:before {
+			content: '';
+			position: absolute;
+			width: 30px;
+			height: 1px;
+			top: 0;
+			left: 0;
+			right: 0;
+			margin: 0 auto;
+			background: #000;
+		}
+		& b {
+			font-size: 16px;
+			font-weight: bold;
+		}
+		& b.rub {
+			font-weight: normal;
+		}
+	}
+}
+.rub {
+	font-family:'PT Sans',sans-serif;
+}
+.arrowed-link {
+  padding-right: 20px;
+}
+.arrowed-link:after {
+	content: "→";
+  margin-left: 5px;
+  position: absolute;
+  font-style: normal;
+  font-size: 16px;
+}
+.b-breadcrumbs {
+	text-align: center;
+}
+.b-breadcrumbs ul {
+	list-style: none;
+	padding: 0;
+	display: inline-block;
+	vertical-align: top;
+	text-align: left;
+	margin: 10px 0;
+	& li {
+		display: inline-block;
+		vertical-align: top;
+		& a,
+		& span {
+			.serif__italic(14px);
+			color: #d3c393;
+			position: relative;
+			margin-right: 8px;
+			letter-spacing: .05em;
+			&:before {
+				content: "/";
+		    font-size: 12px;
+		    left: -7px;
+		    position: absolute;
+		    top: 0;
+			}
+		}
+		&:first-child a:before {
+			display: none;
+		}
+		
 	}
 }
