--- a/f/less/style.less
+++ b/f/less/style.less
@@ -93,7 +93,7 @@
 	top: -3px;
 	width: 21px;
 	height: 22px;
-	background: url(../..../../f/i/cart-icon.png);
+	background: url(../../f/i/cart-icon.png);
 	display: block;
 }
 
@@ -125,7 +125,7 @@
 		left: 10px;
 		width: 90px;
 		position: absolute;
-		background: url(../..../../f/i/main-menu-icons.png) no-repeat;
+		background: url(../../f/i/main-menu-icons.png) no-repeat;
 		z-index: -1;
 	}
 	&:after {
@@ -136,7 +136,7 @@
 		left: 10px;
 		width: 90px;
 		position: absolute;
-		background: url(../..../../f/i/main-menu-icons.png) no-repeat;
+		background: url(../../f/i/main-menu-icons.png) no-repeat;
 		.transition(opacity, .2s, ease-in-out);
 	}
 	&:hover:after {
@@ -291,7 +291,7 @@
 .header__map:before{
 	content: '';
 	display: block;
-	background: url(../..../../f/i/map-icon.png);
+	background: url(../../f/i/map-icon.png);
 	width: 20px;
 	height: 23px;
 	position: absolute;
@@ -324,14 +324,14 @@
 	height: 396px;
 	margin: 0 auto;
 	clear: both;
-	background: url(../..../../f/i/main-banner-back.jpg);
+	background: url(../../f/i/main-banner-back.jpg);
 	border: 2px solid #222a2e;
 	position: relative;
 	
 	&:before{
 		content: '';
 		position: absolute;
-		background: url(../..../../f/i/main-banner-back-left.png);
+		background: url(../../f/i/main-banner-back-left.png);
 		left: -113px;
 		top: 155px;
 		width: 112px;
@@ -341,7 +341,7 @@
 	&:after{
 		content: '';
 		position: absolute;
-		background: url(../..../../f/i/main-banner-back-right.png);
+		background: url(../../f/i/main-banner-back-right.png);
 		width: 153px;
 		height: 298px;
 		right: -155px;
@@ -430,7 +430,7 @@
 		&__title:after{
 			content: '';
 			position: absolute;
-			background: url(../..../../f/i/main-slides/info-separator.png);
+			background: url(../../f/i/main-slides/info-separator.png);
 			bottom: -50px;
 			left: 10px;
 			width: 320px;
@@ -487,7 +487,7 @@
 		height: 440px;
 		width: 1010px;
 		opacity: 0;
-		background: url(../..../../f/i/prof-center-back.jpg) no-repeat 0 -440px;
+		background: url(../../f/i/prof-center-back.jpg) no-repeat 0 -440px;
 		.transition(opacity, .2s, ease-in-out);
 		z-index: -1;
 	}
@@ -499,7 +499,7 @@
 		height: 440px;
 		width: 1010px;
 		opacity: 1;
-		background: url(../..../../f/i/prof-center-back.jpg) no-repeat 0 0;
+		background: url(../../f/i/prof-center-back.jpg) no-repeat 0 0;
 		.transition(opacity, .2s, ease-in-out);
 		z-index: -1;
 	}
@@ -536,7 +536,7 @@
 		&:before{
 			content: '';
 			display: block;
-			background: url(../..../../f/i/map-icon.png) no-repeat;
+			background: url(../../f/i/map-icon.png) no-repeat;
 			width: 20px;
 			height: 23px;
 			position: absolute;
@@ -577,7 +577,7 @@
 		&:before{
 			content: '';
 			display: block;
-			background: url(../..../../f/i/catalog-icon.png) no-repeat;
+			background: url(../../f/i/catalog-icon.png) no-repeat;
 			width: 24px;
 			height: 20px;
 			position: absolute;
@@ -642,7 +642,7 @@
 		&:after{
 			content: '';
 			position: absolute;
-			background: url(../..../../f/i/about-center-separator.png);
+			background: url(../../f/i/about-center-separator.png);
 			bottom: -50px;
 			left: 0;
 			right: 0;
@@ -717,7 +717,7 @@
 		.icon-video,
 		.icon-blog:after,
 		.icon-video:after {
-			background: url(../..../../f/i/about-center-btn.png);
+			background: url(../../f/i/about-center-btn.png);
 			width: 80px;
 			height: 80px;
 			position: absolute;
@@ -764,7 +764,7 @@
 		padding: 0;
 		width: 590px;
 		height: 400px;
-		background: url(../..../../f/i/about-center-slider/slider-back.jpg) no-repeat;
+		background: url(../../f/i/about-center-slider/slider-back.jpg) no-repeat;
 		position: relative;
 		&__wrap {
 			overflow: hidden;
@@ -803,7 +803,7 @@
 				top: 2px;
 				width: 38px;
 				height: 14px;
-				background: url(../..../../f/i/about-center-slider/slider-arrows.png) 0 0 no-repeat;
+				background: url(../../f/i/about-center-slider/slider-arrows.png) 0 0 no-repeat;
 			}
 			cursor: pointer;
 			&:hover {
@@ -827,7 +827,7 @@
 				top: 2px;
 				width: 38px;
 				height: 14px;
-				background: url(../..../../f/i/about-center-slider/slider-arrows.png) -38px 0 no-repeat;
+				background: url(../../f/i/about-center-slider/slider-arrows.png) -38px 0 no-repeat;
 			}
 			cursor: pointer;
 			&:hover {
@@ -892,7 +892,7 @@
 			top: 55px;
 			width: 38px;
 			height: 14px;
-			background: url(../..../../f/i/about-center-slider/slider-arrows.png) 0 0 no-repeat;
+			background: url(../../f/i/about-center-slider/slider-arrows.png) 0 0 no-repeat;
 			cursor: pointer;
 			&:hover {
 				background-position: 0 -14px;
@@ -905,7 +905,7 @@
 			right: -60px;
 			height: 14px;
 			width: 38px;
-			background: url(../..../../f/i/about-center-slider/slider-arrows.png) -38px 0 no-repeat;
+			background: url(../../f/i/about-center-slider/slider-arrows.png) -38px 0 no-repeat;
 			cursor: pointer;
 			&:hover {
 				background-position: -38px -14px;
@@ -953,7 +953,7 @@
 			margin: 0 auto;
 			display: inline-block;
 		 	position: absolute;
-			background: url(../..../../f/i/bottom-menu-icons.jpg) no-repeat;
+			background: url(../../f/i/bottom-menu-icons.jpg) no-repeat;
 		}
 		&:after {
 			opacity: 0;
@@ -1056,7 +1056,7 @@
 				left: -60px;
 				width: 54px;
 				position: absolute;
-				background: url(../..../../f/i/big-map-icon.png) no-repeat;
+				background: url(../../f/i/big-map-icon.png) no-repeat;
 			}
 		}
 		
@@ -1097,7 +1097,7 @@
 			left: 300px;
 			width: 20px;
 			position: absolute;
-			background: url(../..../../f/i/map-arrow.png) no-repeat;
+			background: url(../../f/i/map-arrow.png) no-repeat;
 		}
 		
 		&_1{
