--- a/f/less/style.less
+++ b/f/less/style.less
@@ -1196,8 +1196,9 @@
 		position: relative;
 	}
 	&__link {
-		.serif__italic(16px);
+		.serif__italic(16px); 
 		letter-spacing: .05em;
+		text-decoration: none;
 		&:before {
 			content: '';
 			position: absolute;
@@ -1284,6 +1285,7 @@
 			border: 12px solid transparent;
 			border-bottom: 12px solid #d6c494;
 			border-top: none;
+			-moz-transform: scale(.9999);
 			top: -12px;
 			left: 0;
 			right: 0;
