--- a/f/less/style.less
+++ b/f/less/style.less
@@ -1196,8 +1196,9 @@
 		position: relative;
 	}
 	&__link {
-		.serif__italic(16px);
+		.serif__italic(16px); 
 		letter-spacing: .05em;
+		text-decoration: none;
 		&:before {
 			content: '';
 			position: absolute;
@@ -1221,7 +1222,7 @@
 		}
 		.b-submenu__item_1 &:before {
 			width: 51px;
-			height: 61px;
+			height: 60px;
 			background-position: 0 -1px;
 			margin-left: -25px;
 		}
@@ -1269,41 +1270,23 @@
 			margin-left: -22px;
 		}
 	}
+
 	& ul {
-		margin-top: 30px;
 		list-style: none;
-		padding: 15px 20px 5px;
+		padding: 15px 20px 15px;
 		border: 2px solid #d6c494;
 		text-align: left;
 		margin-bottom: 20px;
 		position: relative;
-		&:before,
-		&:after {
-			position: absolute;
-			content: '';
-			border: 12px solid transparent;
-			border-bottom: 12px solid #d6c494;
-			border-top: none;
-			top: -12px;
-			left: 0;
-			right: 0;
-			margin: 0 auto;
-			width: 0;
-		}
-		&:after {
-			border: 10px solid transparent;
-			border-bottom: 10px solid #fff;
-			top: -19px;
-			z-index: 2;
-		}
 		& li {
-			margin-bottom: 12px;
+			margin-bottom: 10px;
+			line-height: 20px;
 		}
 		& li a {
-			.sans(16px);
+			.sans(14px);
 			border-bottom: 1px dotted;
 			text-decoration: none;
-			line-height: 17px;
+			line-height: 15px;
 			display: inline-block;
 			margin-right: 5px;
 			letter-spacing: .025em;
@@ -1315,6 +1298,46 @@
 		& li span {
 			.sans(14px);
 			color: #b9a264;
+		}
+		& li b {
+			.sans(16px);
+			font-weight: bold;
+			margin-right: 5px;
+		}
+	}
+	&_scrolled ul {
+		max-height: 200px;
+		overflow: hidden;
+		&:before {
+			content: '';
+			position: absolute;
+			width: 100%;
+			height: 50px;
+
+		}
+	}
+	&__inner {
+		margin-top: 30px;
+		position: relative;
+		&:before,
+		&:after {
+			position: absolute;
+			content: '';
+			border: 12px solid transparent;
+			border-bottom: 12px solid #d6c494;
+			border-top: none;
+			-moz-transform: scale(.9999);
+			top: -11px;
+			left: 0;
+			right: 0;
+			margin: 0 auto;
+			width: 0;
+		}
+		&:after {
+			border: 10px solid transparent;
+			border-bottom: 10px solid #fff;
+			top: -18px;
+			z-index: 2;
 		}
 	}
 }
@@ -1343,11 +1366,14 @@
 	}
 	&__section {
 		position: relative;
-		min-height: 100px;
 		overflow: hidden;
 		& + & {
 			margin-top: -15px;
 		}
+	}
+	&__ico {
+		padding-top: 50px;
+		text-align: center;
 	}
 	&__sep {
 		background: url(../../f/i/icons.png) 0 0;
@@ -1399,6 +1425,27 @@
 			width: 34px;
 			height: 62px;
 			background-position: -10px -115px;
+		}
+		&_more {
+			background: none;
+			width: auto;
+			text-align: center;
+			margin-bottom: 0;
+			&:after {
+				margin-right: 70px;
+			}
+			&:before {
+				margin-left: 70px;
+			}
+			& a {
+				line-height: 35px;
+				display: inline-block;
+				.serif__italic(14px);
+				letter-spacing: .05em;
+				&:hover {
+					color: #2f6b23;
+				}
+			}
 		}
 	}
 	&__item {
@@ -1507,6 +1554,9 @@
   position: absolute;
   font-style: normal;
   font-size: 16px;
+}
+.arrowed-link_down:after {
+	content: "↓";
 }
 .b-breadcrumbs {
 	text-align: center;
