--- a/f/less/style.less
+++ b/f/less/style.less
@@ -324,14 +324,14 @@
 	height: 396px;
 	margin: 0 auto;
 	clear: both;
-	background: url(../../f/i/main-banner-back.jpg);
+	background: url(../../f/i/main-back.jpg);
 	border: 2px solid #222a2e;
 	position: relative;
 	
 	&:before{
 		content: '';
 		position: absolute;
-		background: url(../../f/i/main-banner-back-left.png);
+		background: url(../../f/i/main-back-left.png);
 		left: -113px;
 		top: 155px;
 		width: 112px;
@@ -341,7 +341,7 @@
 	&:after{
 		content: '';
 		position: absolute;
-		background: url(../../f/i/main-banner-back-right.png);
+		background: url(../../f/i/main-back-right.png);
 		width: 153px;
 		height: 298px;
 		right: -155px;
@@ -1273,7 +1273,7 @@
 
 	& ul {
 		list-style: none;
-		padding: 15px 20px 15px;
+		padding: 15px 5px 15px 20px;
 		border: 2px solid #d6c494;
 		text-align: left;
 		margin-bottom: 20px;
@@ -1306,18 +1306,27 @@
 		}
 	}
 	&_scrolled ul {
-		max-height: 200px;
+		max-height: 300px;
 		overflow: hidden;
+		position: relative;
 		&:before {
 			content: '';
 			position: absolute;
 			width: 100%;
 			height: 50px;
-
+			bottom: 0;
+			left: 0;
+		  background: rgba(255,255,255,1);
+			background: -moz-linear-gradient(bottom, rgba(255,255,255,1) 30%, rgba(255,255,255,0) 100%);
+			background: -webkit-linear-gradient(bottom, rgba(255,255,255,1) 30%, rgba(255,255,255,0) 100%);
+			background: -o-linear-gradient(bottom, rgba(255,255,255,1) 30%, rgba(255,255,255,0) 100%);
+			background: -ms-linear-gradient(bottom, rgba(255,255,255,1) 30%, rgba(255,255,255,0) 100%);
+			background: linear-gradient(to top, rgba(255,255,255,1) 30%, rgba(255,255,255,0) 100%);
+			z-index: 1;
 		}
 	}
 	&__inner {
-		margin-top: 30px;
+		margin-top: 20px;
 		position: relative;
 		&:before,
 		&:after {
@@ -1341,6 +1350,22 @@
 		}
 	}
 }
+.mCSB_draggerRail {
+	background-color: #ede6cf !important;
+}
+.mCSB_scrollTools .mCSB_dragger_bar {
+	display: none;
+}
+.mCSB_dragger {
+	opacity: 1 !important;
+	background: #000;
+	border-radius: 0;
+	//height: 50px !important;
+	width: 2px !important;
+	left: 50%;
+	margin-left: -1px;
+	z-index: 2;
+}
 .b-content {
 	width: 1000px;
 	margin: 0 auto;
@@ -1363,6 +1388,18 @@
 		line-height: 40px;
 		text-align: center;
 		margin: 0 0 40px;
+		&_bottom_10 {
+			margin-bottom: 10px;
+		}
+	}
+	&__subtitle {
+		.sans(12px);
+		line-height: 25px;
+		text-transform: uppercase;
+		text-align: center;
+		margin: 0 0 40px;
+		color: #1d2225;
+		letter-spacing: .3em;
 	}
 	&__section {
 		position: relative;
@@ -1456,7 +1493,7 @@
 		display: inline-block;
 		vertical-align: top;
 		text-decoration: none;
-		background: url(../../f/i/main-banner-back.jpg);
+		background: url(../../f/i/main-back.jpg);
 		margin: 0 0 37px 37px;
 		&-holder {
 			border: 1px solid #000;
@@ -1541,6 +1578,198 @@
 			font-weight: normal;
 		}
 	}
+}
+.b-goods {
+	margin-bottom: 40px;
+	&__title {
+		.serif__italic(20px);
+		line-height: 20px;
+		margin: 0 0 20px;
+		letter-spacing: .05em;
+	}
+	&__text {
+		.sans(14px);
+		color: #6b7377;
+		margin: 0 0 40px;
+		line-height: 25px;
+	}
+	&__photo {
+		width: 55%;
+		display: inline-block;
+		vertical-align: top;
+		min-height: 440px;
+	}
+	&__detail {
+		width: 45%;
+		display: inline-block;
+		vertical-align: top;
+		padding-left: 30px;
+		&-title,
+		&-text {
+			.sans(14px);
+			font-weight: bold;
+			line-height: 25px;
+			color: #1d2225;
+			letter-spacing: .025em;
+			margin: 0;
+		}
+		&-text {
+			color: #6b7377;
+			font-weight: normal;
+			margin-bottom: 10px;
+		}
+	}
+	&__table {
+		width: 100%;
+		display: table;
+		margin-bottom: 50px;
+		border-collapse: collapse;
+		&-head {
+			display: table-row;
+			text-align: left;
+			width: 100%;
+			& .b-goods__table-cell {
+				color: #1d2225;
+				.sans(14px);
+				font-weight: bold;
+				line-height: 20px;
+				padding-right: 20px;
+				padding-top: 10px;
+				vertical-align: top;
+				border: none !important;
+				& span {
+					color: #6b7377;
+					font-weight: normal;
+				}
+			}
+		}
+		&-row {
+			text-decoration: none;
+			display: table-row;
+			border-bottom: 2px solid #ede6cf;
+			&:last-child .b-goods__table-cell {
+				border-bottom: 2px solid #ede6cf;
+			}
+			&:hover .b-goods__table-cell {
+				border-top-color: #d6c494;
+				border-bottom: 2px solid #d6c494;
+			}
+			&:hover .b-goods__table-cell:first-child {
+				border-left-color: #d6c494;
+			}
+			&:hover .b-goods__table-cell:last-child {
+				border-right-color: #d6c494;
+			}
+		}
+		&-cell {
+			display: table-cell;
+			.sans(14px);
+			border-top: 2px solid #ede6cf;
+			border-bottom: 0;
+			color: #6b7377;
+			letter-spacing: .025em;
+			padding-top:20px;
+		  padding-bottom:20px; 
+		  vertical-align: middle;
+		  &:first-child {
+		  	padding-left:20px;
+		  	border-left: 2px solid #ede6cf;
+			}
+			&:last-child {
+				padding-right:20px;
+				border-right: 2px solid #ede6cf;
+			}
+			&_price {
+				.serif__italic(16px);
+				font-weight: bold;
+				& b {
+					font-weight: normal;
+				}
+			}
+			&_count {
+				text-align: center;
+			}
+		}
+	}
+}
+.b-cart-btn {
+	padding: 0 10px;
+	.serif__italic(14px);
+	color: #326a23;
+	border: 2px solid #326a23;
+	line-height: 24px;
+	display: inline-block;
+	vertical-align: top;
+	letter-spacing: .05em;
+	background: #fff;
+	position: relative;
+}
+.b-count-input {
+	width: 30px;
+	border: 2px solid #000;
+	line-height: 24px;
+	text-align: center;
+	.serif__italic(14px);
+	display: inline-block;
+	vertical-align: top;
+	margin: 0 5px;
+}
+.b-count-btn {
+	font-size: 30px;
+	line-height: 26px;
+	display: inline-block;
+	vertical-align: top;
+	color: #000;
+	cursor: pointer;
+}
+.es-carousel {
+	text-align: center;
+	margin-bottom: 50px;
+	& ul {
+		padding: 0;
+		display: inline-block;
+		vertical-align: top;
+		width: auto !important;
+		margin: 0 0 0 -5px;
+		& li {
+			display: inline-block;
+			vertical-align: top;
+			width: 40px !important;
+			height: 40px;
+			border: 1px solid #222a2e;
+			margin: 0 0 0 5px;
+			& a:focus {
+				outline: none;
+			}
+			& a img {
+				width: 100%;
+				opacity: .5;
+			}
+			&.selected a img {
+				opacity: 1;
+			}
+		}
+	}
+}
+.rg-image-wrapper {
+	padding: 10px;
+	border: 2px solid #222a2e;
+	background: url(../../f/i/main-back.jpg);
+	margin-bottom: 10px;
+}
+.rg-image-holder {
+	border: 1px solid #222a2e;
+	padding: 25px 25px 10px;
+	background: #f9f8f7;
+}
+.rg-image img {
+	width: 100%;
+	border: 1px solid #222a2e;
+}
+.rg-caption p {
+	font-family: "PT Serif";
+	color: #1d2225;
+	text-align: center;
 }
 .rub {
 	font-family:'PT Sans',sans-serif;
