--- a/f/less/style.less
+++ b/f/less/style.less
@@ -920,6 +920,8 @@ input[type=number] {
 	&_active {
 		max-height: 5000px;
 		.transition(max-height, .8s, ease-in-out);
+	}
+	&_opened {
 		overflow: visible;
 	}
 }
